phpMyFAQ 2.6.8
Codename "Portia"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.6.8 - 2010-08-
- dropped Oracle database support (Thorsten)
- added new TinyMCE plugin for adding internal links by a suggest search (Thorsten)
- added basic HTML5 powered administration backend (Thorsten) 
- updated bundled TCPDF library to version 5.6.000 (Thorsten)
- updated bundled TinyMCE editor component to version 3.3.8 (Thorsten)
- updated bundled phpseclib to version 0.2.1 (Thorsten)
- fixed XML rendering issue (Thorsten)
- updated Russian translation
- updated Portuguese translation
- fixed many bugs (Thorsten, Bram)
    
Version 2.6.7 - 2010-07-29
- refactored search backend (Thorsten)
- improved pagination functionality (Thorsten)
- fixed various problems with Microsoft SQL Server Driver for PHP (Thorsten)
- fixed minor bugs (Thorsten, Aaron Burgie)

Version 2.6.6 - 2010-06-21
- refactored database abstraction (Thorsten)
- fixed OpenLDAP authentication (Franky)
- fixed duplication of search results (Aaron Burgie)
- fixed issue with duplicate sitemap characters (Aaron Burgie)
- fixed solution ID issues (Thorsten)
- Improved Glossary deletion workflow (Thorsten)
- updated Brazilian Portuguese translation
- updated Norwegian Bokmål translation
- fixed minor bugs (Thorsten, Philip Mikas)

Version 2.6.5 - 2010-05-24
- updated bundled TCPDF library to version 5.0.009 (Thorsten)
- updated bundled TinyMCE editor component to version 3.3.5.1 (Thorsten)
- refactored OpenSearch plugin code base (Thorsten)
- fixed small update issues in update script (Thorsten)
- fixed missing language fallback issue in instant response (Thorsten)
- fixed user deletion in admin backend (Thorsten)
- fixed backup/restore bug (Thorsten)
- updated Polish translation
- updated Russian translation
- updated Thai translation
- fixed minor bugs (Thorsten)

Version 2.6.4 - 2010-04-18
- added experimental support for Microsoft SQL Server Driver for PHP (Thorsten)